--- a/style.css
+++ b/style.css
@@ -106,7 +106,6 @@ input::-webkit-inner-spin-button {
   align-items: center;
 }
 
-
 nav ul li:first-child {
   margin-left: 30px;
 }
@@ -124,20 +123,17 @@ nav ul li:first-child {
   width: 100%;
 }
 
-
 .hidden {
   display: none;
 }
 
 .modal {
-
-  position: fixed ;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1.1);
+  position: fixed;
+  top: 0;
+  left: 30%;
   z-index: 15;
   overflow: hidden;
-  width: 50%;
+  width: 35%;
 }
 
 .close-modal {
@@ -155,7 +151,6 @@ nav ul li:first-child {
   position: absolute;
 }
 
-
 .item {
   font-weight: 500;
   display: flex;
@@ -163,8 +158,6 @@ nav ul li:first-child {
   align-items: center;
   width: 95%;
 }
-
-
 
 .modal .main-img {
   width: 100%;
@@ -233,7 +226,7 @@ nav ul li:first-child {
   width: 100%;
 }
 
-.counter{
+.counter {
   display: flex;
   justify-content: space-between;
   width: 120px;
@@ -247,50 +240,39 @@ nav ul li:first-child {
   font-weight: bolder;
 }
 
-
-
-
 .product .mainPhoto {
   display: flex;
   align-items: center;
   position: relative;
 }
 
-
-
-.hamburgerMobile{
+.hamburgerMobile {
   position: absolute;
   z-index: 100;
   text-align: center;
   width: 100%;
 }
 
-.hamburgerLink{
+.hamburgerLink {
   display: none;
   z-index: 10;
   text-decoration: none;
   text-align: center;
   width: 90%;
   background-color: rgba(17, 13, 13, 0.877);
-  color: rgb(250, 97, 41) ;
+  color: rgb(250, 97, 41);
   height: 70px;
-  padding-top:20px;
-  border-bottom: 2px solid rgb(250, 97, 41) ;
+  padding-top: 20px;
+  border-bottom: 2px solid rgb(250, 97, 41);
   font-size: 25px;
   font-weight: 500;
   transition: background-color 0.5s;
-
-
 }
 
-.hamburgerLink:hover{
-  background-color: rgb(250, 97, 41) ;
-  color:black;
-
+.hamburgerLink:hover {
+  background-color: rgb(250, 97, 41);
+  color: black;
 }
-
-
-
 
 .main-img {
   margin-bottom: 1.6rem;
@@ -331,7 +313,7 @@ nav ul li:first-child {
   display: inline-block;
 }
 .images {
-width: 350px;
+  width: 350px;
 }
 .add:hover {
   font-weight: bold;
@@ -533,15 +515,15 @@ width: 350px;
   text-align: center;
   font-size: 1.1rem;
   position: relative;
-  top:200px;
+  top: 200px;
 }
 
-.btn:hover{  
-font-weight: bold;
-cursor: pointer;
-animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
-transform: translate3d(0, 0, 0);
-perspective: 1000px;
+.btn:hover {
+  font-weight: bold;
+  cursor: pointer;
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  perspective: 1000px;
 }
 .listCart {
   display: flex;
@@ -565,16 +547,14 @@ perspective: 1000px;
   font-weight: 1000;
   margin-right: 00px;
   color: rgb(250, 97, 41);
-  -webkit-text-fill-color: black; 
+  -webkit-text-fill-color: black;
   -webkit-text-stroke-width: 1.4px;
   -webkit-text-stroke-color: rgb(250, 97, 41);
 }
 
+/* ///////////////// SLIDER ///////////////////// */
 
-
- /* ///////////////// SLIDER ///////////////////// */
-
- .slider {
+.slider {
   height: 50rem;
   margin: 0 auto;
   position: relative;
@@ -583,7 +563,6 @@ perspective: 1000px;
   overflow: hidden;
   display: none;
 }
-
 
 .slide {
   position: absolute;
@@ -597,7 +576,7 @@ perspective: 1000px;
   transition: transform 1s;
 }
 
-.slide img{
+.slide img {
   width: 100%;
   height: 100%;
 }
@@ -621,7 +600,6 @@ perspective: 1000px;
   width: 60px;
   cursor: pointer;
 }
-
 
 .slider__btn--left {
   left: 6%;
@@ -651,7 +629,6 @@ perspective: 1000px;
   margin-right: 1.75rem;
   cursor: pointer;
   transition: all 0.5s;
-
 }
 
 .dots__dot:last-child {
